--- a/webHacks/MYMETA.yml
+++ b/webHacks/MYMETA.yml
@@ -25,6 +25,7 @@ requires:
   LWP::UserAgent: '0'
   Moose: '0'
   Net::SSL: '0'
+  Parallel::ForkManager: '0'
   Term::ANSIColor: '0'
   Text::Table: '0'
   URI::Escape: '0'
