--- a/webHacks/MYMETA.yml
+++ b/webHacks/MYMETA.yml
@@ -24,6 +24,7 @@ requires:
   HTTP::Request: '0'
   HTTP::Response: '0'
   LWP::UserAgent: '0'
+  Math::Round: '0'
   Moose: '0'
   Net::SSL: '0'
   Parallel::ForkManager: '0'
