--- a/webHacks/MYMETA.yml
+++ b/webHacks/MYMETA.yml
@@ -28,6 +28,7 @@ requires:
   Moose: '0'
   Net::SSL: '0'
   Parallel::ForkManager: '0'
+  Switch: '0'
   Term::ANSIColor: '0'
   Text::Table: '0'
   Text::Unidecode: '0'
