--- a/webHacks/Makefile
+++ b/webHacks/Makefile
@@ -19,7 +19,7 @@
 #     MIN_PERL_VERSION => q[5.006]
 #     NAME => q[webHacks]
 #     PL_FILES => {  }
-#     PREREQ_PM => { Getopt::Std=>q[0], HTML::Scrubber=>q[0], HTTP::Cookies=>q[0], HTTP::Request=>q[0], HTTP::Response=>q[0], LWP::UserAgent=>q[0], Math::Round=>q[0], Moose=>q[0], Net::SSL=>q[0], Parallel::ForkManager=>q[0], Term::ANSIColor=>q[0], Test::More=>q[0], Text::Table=>q[0], Text::Unidecode=>q[0], URI::Escape=>q[0] }
+#     PREREQ_PM => { Getopt::Std=>q[0], HTML::Scrubber=>q[0], HTTP::Cookies=>q[0], HTTP::Request=>q[0], HTTP::Response=>q[0], LWP::UserAgent=>q[0], Math::Round=>q[0], Moose=>q[0], Net::SSL=>q[0], Parallel::ForkManager=>q[0], Switch=>q[0], Term::ANSIColor=>q[0], Test::More=>q[0], Text::Table=>q[0], Text::Unidecode=>q[0], URI::Escape=>q[0] }
 #     TEST_REQUIRES => {  }
 #     VERSION_FROM => q[lib/webHacks.pm]
 #     clean => { FILES=>q[webHacks-*] }
@@ -515,6 +515,7 @@ metafile : create_distdir
 	$(NOECHO) $(ECHO) '  Moose: '\''0'\''' >> META_new.yml
 	$(NOECHO) $(ECHO) '  Net::SSL: '\''0'\''' >> META_new.yml
 	$(NOECHO) $(ECHO) '  Parallel::ForkManager: '\''0'\''' >> META_new.yml
+	$(NOECHO) $(ECHO) '  Switch: '\''0'\''' >> META_new.yml
 	$(NOECHO) $(ECHO) '  Term::ANSIColor: '\''0'\''' >> META_new.yml
 	$(NOECHO) $(ECHO) '  Text::Table: '\''0'\''' >> META_new.yml
 	$(NOECHO) $(ECHO) '  Text::Unidecode: '\''0'\''' >> META_new.yml
@@ -568,6 +569,7 @@ metafile : create_distdir
 	$(NOECHO) $(ECHO) '            "Moose" : "0",' >> META_new.json
 	$(NOECHO) $(ECHO) '            "Net::SSL" : "0",' >> META_new.json
 	$(NOECHO) $(ECHO) '            "Parallel::ForkManager" : "0",' >> META_new.json
+	$(NOECHO) $(ECHO) '            "Switch" : "0",' >> META_new.json
 	$(NOECHO) $(ECHO) '            "Term::ANSIColor" : "0",' >> META_new.json
 	$(NOECHO) $(ECHO) '            "Text::Table" : "0",' >> META_new.json
 	$(NOECHO) $(ECHO) '            "Text::Unidecode" : "0",' >> META_new.json
@@ -879,6 +881,7 @@ ppd :
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Moose::" />' >> webHacks.ppd
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Net::SSL" />' >> webHacks.ppd
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Parallel::ForkManager" />' >> webHacks.ppd
+	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Switch::" />' >> webHacks.ppd
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Term::ANSIColor" />' >> webHacks.ppd
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Text::Table" />' >> webHacks.ppd
 	$(NOECHO) $(ECHO) '        <REQUIRE NAME="Text::Unidecode" />' >> webHacks.ppd
